[gd_scene load_steps=11 format=2]

[ext_resource path="res://npc/enemy/sprites/Indian.png" type="Texture" id=1]
[ext_resource path="res://npc/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://scripts/state_machines/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://scripts/state_machines/enemy/Wander.gd" type="Script" id=4]
[ext_resource path="res://npc/enemy/SearchGold.gd" type="Script" id=5]
[ext_resource path="res://npc/enemy/ChooseNextAction.gd" type="Script" id=6]
[ext_resource path="res://npc/enemy/ChasePlayer.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[sub_resource type="CircleShape2D" id=3]
radius = 14.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 72
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
run_speed = 100.0
attack_cooldown_timer = NodePath("Timers/AtackCooldownTimer")
state_machine = NodePath("StateMachine")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
wander_timer = NodePath("../../Timers/WanderTimer")
stop_timer = NodePath("../../Timers/StopTimer")
detection_range_area = NodePath("../../DetectionRange")

[node name="SearchGold" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="ChooseNextAction" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
detection_range_area = NodePath("../../DetectionRange")

[node name="ChasePlayer" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
detection_range_area = NodePath("../../DetectionRange")

[node name="Timers" type="Node" parent="."]

[node name="WanderTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="AtackCooldownTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="StopTimer" type="Timer" parent="Timers"]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="DetectionRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 131

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 2 )

[node name="AttackRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 131

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2( 0, 11.9055 )
shape = SubResource( 3 )

[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
